<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#2d2d2d"
	tools:context="com.glenfordham.carportopener.gui.MainScreen"
	>

	<Button
		android:id="@+id/btn_opendoor"
		android:layout_width="wrap_content"
		android:layout_height="250dp"
		android:layout_marginStart="8dp"
		android:width="300dp"
		android:text="@string/gui_opendoor"
		android:textColor="#FFFFFFFF"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.498" />

	<TextView
		android:id="@+id/lbl_door_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/gui_doorstatus"
		android:textColor="#FFFFFFFF"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/btn_opendoor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.45" />

	<TextView
		android:id="@+id/txt_door_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:textColor="#FFFFFFFF"
		app:layout_constraintHorizontal_bias=".5"
		app:layout_constraintVertical_bias=".1"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/btn_opendoor"
		app:layout_constraintTop_toBottomOf="@+id/lbl_door_status"
		/>

	<TextView
		android:id="@+id/txt_trigger_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text=""
		android:textColor="#FFFFFFFF"
		app:layout_constraintTop_toBottomOf="@+id/btn_opendoor"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		/>

	<ImageView
		android:id="@+id/btn_settings"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:contentDescription="@string/gui_settings_tooltip"
		android:src="@android:drawable/ic_menu_manage"
		app:layout_constraintBottom_toTopOf="@+id/lbl_door_status"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintRight_toRightOf="@+id/btn_opendoor"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/lbl_version_number"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:textColor="#505050"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/txt_trigger_status"
		app:layout_constraintTop_toBottomOf="@+id/txt_trigger_status"
		app:layout_constraintHorizontal_bias=".75" />

</androidx.constraintlayout.widget.ConstraintLayout>
